Build/third-party-libraries/packages/nuget.org/system.memory/4.5.3/readme.md
System.Memory [4.5.3](https://www.nuget.org/packages/System.Memory/4.5.3)
--------------------

Used by: Core, DesignTime, SelfHost

Target frameworks: net462, netstandard2.0, netstandard2.1

License: [MIT](../../../../licenses/mit) 

- package license: [MIT](https://github.com/dotnet/corefx/blob/master/LICENSE.TXT) 
- project license: [Unknown](https://dot.net/) , License should be verified on https://dot.net/

Description
-----------
Provides types for efficient representation and pooling of managed, stack, and native memory segments and sequences of such segments, along with primitives to parse and format UTF-8 encoded text stored in those memory segments.

Commonly Used Types:
System.Span
System.ReadOnlySpan
System.Memory
System.ReadOnlyMemory
System.Buffers.MemoryPool
System.Buffers.ReadOnlySequence
System.Buffers.Text.Utf8Parser
System.Buffers.Text.Utf8Formatter
 
c6cf790234e063b855fcdb50f3fb1b3cfac73275 
When using NuGet 3.x this package requires at least version 3.4.

Remarks
-----------
no remarks


Dependencies 4
-----------

|Name|Version|
|----------|:----|
|[System.Buffers](../../../../packages/nuget.org/system.buffers/4.4.0)|4.4.0|
|[System.Numerics.Vectors](../../../../packages/nuget.org/system.numerics.vectors/4.4.0)|4.4.0|
|[System.Runtime.CompilerServices.Unsafe](../../../../packages/nuget.org/system.runtime.compilerservices.unsafe/4.5.2)|4.5.2|
|[System.Runtime.CompilerServices.Unsafe](../../../../packages/nuget.org/system.runtime.compilerservices.unsafe/4.5.3)|4.5.3|

*This page was generated by a tool.*