Build/third-party-libraries/packages/nuget.org/system.memory/4.5.5/readme.md
System.Memory [4.5.5](https://www.nuget.org/packages/System.Memory/4.5.5)
--------------------

Used by: ClientDI internal, Core internal, DesignTime internal, Emit internal, MessagePack, ProtoBuf, SelfHost internal

Target frameworks: net462, net6.0, net8.0, net9.0, netstandard2.0, netstandard2.1

License: [MIT](../../../../licenses/mit) 

- package license: [MIT](https://github.com/dotnet/corefx/blob/master/LICENSE.TXT) 
- project license: [Unknown](https://dot.net/) , License should be verified on https://dot.net/

Description
-----------
Provides types for efficient representation and pooling of managed, stack, and native memory segments and sequences of such segments, along with primitives to parse and format UTF-8 encoded text stored in those memory segments.

Commonly Used Types:
System.Span
System.ReadOnlySpan
System.Memory
System.ReadOnlyMemory
System.Buffers.MemoryPool
System.Buffers.ReadOnlySequence
System.Buffers.Text.Utf8Parser
System.Buffers.Text.Utf8Formatter
 
32b491939fbd125f304031c35038b1e14b4e3958 
When using NuGet 3.x this package requires at least version 3.4.

Remarks
-----------
no remarks


Dependencies 5
-----------

|Name|Version|
|----------|:----|
|[System.Buffers](../../../../packages/nuget.org/system.buffers/4.5.1)|4.5.1|
|[System.Numerics.Vectors](../../../../packages/nuget.org/system.numerics.vectors/4.4.0)|4.4.0|
|[System.Numerics.Vectors](../../../../packages/nuget.org/system.numerics.vectors/4.5.0)|4.5.0|
|[System.Runtime.CompilerServices.Unsafe](../../../../packages/nuget.org/system.runtime.compilerservices.unsafe/4.5.3)|4.5.3|
|[System.Runtime.CompilerServices.Unsafe](../../../../packages/nuget.org/system.runtime.compilerservices.unsafe/6.0.0)|6.0.0|

*This page was generated by a tool.*